[gd_scene load_steps=3 format=3 uid="uid://cyc2mbiw4h8s3"]

[ext_resource type="Script" uid="uid://dht02u8u3um84" path="res://scripts/Menu/create_lobby.gd" id="1_o5rdg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qgnh"]
bg_color = Color(0, 0.544944, 0.296288, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CreateLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5rdg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.100563, 0.187988, 0.268288, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_top = 60.0
offset_right = 156.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 48
text = "Create Lobby"
fit_content = true

[node name="FormPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -176.5
offset_right = 246.0
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2

[node name="MaxPlayers" type="Control" parent="FormPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="FormPanel/MaxPlayers"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 228.0
offset_bottom = 58.0
theme_override_font_sizes/normal_font_size = 18
text = "Nombre joueurs max"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="FormPanel/MaxPlayers"]
layout_mode = 0
offset_left = 269.0
offset_top = 29.0
offset_right = 355.562
offset_bottom = 60.0
min_value = 2.0
max_value = 6.0
value = 4.0

[node name="LobbyDuration" type="Control" parent="FormPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel2" type="RichTextLabel" parent="FormPanel/LobbyDuration"]
layout_mode = 0
offset_left = 32.0
offset_top = 79.0
offset_right = 228.0
offset_bottom = 105.0
theme_override_font_sizes/normal_font_size = 18
text = "Durée de la partie"

[node name="LobbyDurationSpinBox" type="SpinBox" parent="FormPanel/LobbyDuration"]
layout_mode = 0
offset_left = 269.0
offset_top = 76.0
offset_right = 355.562
offset_bottom = 107.0
min_value = 5.0
max_value = 60.0
step = 5.0
value = 30.0
suffix = "mn"

[node name="LobbyIsPrivate" type="Control" parent="FormPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel3" type="RichTextLabel" parent="FormPanel/LobbyIsPrivate"]
layout_mode = 0
offset_left = 32.0
offset_top = 125.0
offset_right = 228.0
offset_bottom = 151.0
theme_override_font_sizes/normal_font_size = 18
text = "Lobby privé"

[node name="IsPrivateCheckButton" type="CheckButton" parent="FormPanel/LobbyIsPrivate"]
layout_mode = 0
offset_left = 263.0
offset_top = 128.0
offset_right = 307.0
offset_bottom = 152.0

[node name="LobbyPrivateSecret" type="Control" parent="FormPanel"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel4" type="RichTextLabel" parent="FormPanel/LobbyPrivateSecret"]
layout_mode = 0
offset_left = 32.0
offset_top = 169.0
offset_right = 228.0
offset_bottom = 195.0
theme_override_font_sizes/normal_font_size = 18
text = "Code secret"

[node name="LobbyPrivateSecretLineEdit" type="LineEdit" parent="FormPanel/LobbyPrivateSecret"]
layout_mode = 0
offset_left = 269.0
offset_top = 166.0
offset_right = 337.562
offset_bottom = 197.0
max_length = 4

[node name="CreateButton" type="Button" parent="FormPanel"]
layout_mode = 0
offset_left = 179.0
offset_top = 252.0
offset_right = 294.0
offset_bottom = 289.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7qgnh")
text = "Créer"
